--- a/static/css/base.css
+++ b/static/css/base.css
@@ -156,7 +156,18 @@ body {
 .mensajeria{
   clear:right;
 }
-
+.buscador{
+  float: right;
+  width: 380px;
+  height: 37px;
+  margin-left: 10px;
+  margin-top: 10px;
+  line-height: 37px;
+  text-align: center;
+}
+.busca{
+  margin-top: 5px;
+}
 /*----------actor------------*/
 .perfil_actor{
   width:400px;
